--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 export(graph_perm_test)
 export(plot_permutations)
 export(plot_test_network)
+import(ggnetwork)
 import(ggplot2)
 import(phyloseq)
+importFrom(igraph,"E<-")
+importFrom(igraph,"V<-")
+importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,get.edgelist)
 importFrom(igraph,graph.adjacency)
-importFrom(igraph,layout.fruchterman.reingold)
 importFrom(igraph,minimum.spanning.tree)
+importFrom(igraph,subgraph.edges)
