--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,5 @@ importFrom(igraph,E)
 importFrom(igraph,V)
 importFrom(igraph,get.edgelist)
 importFrom(igraph,graph.adjacency)
+importFrom(igraph,induced_subgraph)
 importFrom(igraph,minimum.spanning.tree)
-importFrom(igraph,subgraph.edges)
