--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,13 @@ Author: Julia Fukuyama [aut, cre]
 Maintainer: Julia Fukuyama <julia.fukuyama@gmail.com>
 Description: Graph-based permutation tests and visualization for microbiome data. 
 Imports:
-    ggnetwork,
-    igraph
+    ggnetwork (>= 1.20.0),
+    igraph (>= 0.5.1),
+    intergraph (>= 2.0.2)
 Depends:
-    R (>= 3.1.0),
+    R (>= 3.4.3),
     ggplot2 (>= 2.2.1),
-    phyloseq
+    phyloseq (>= 1.20.0)
 License: CC0
 LazyData: true
 Suggests: knitr
