--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Author: Julia Fukuyama [aut, cre]
 Maintainer: Julia Fukuyama <julia.fukuyama@gmail.com>
 Description: Graph-based permutation tests and visualization for microbiome data. 
 Imports:
-    ggnetwork (>= 1.20.0),
-    igraph (>= 0.5.1),
+    ggnetwork (>= 0.5.1),
+    igraph (>= 1.1.2),
     intergraph (>= 2.0.2)
 Depends:
     R (>= 3.4.3),
@@ -14,7 +14,7 @@ Depends:
     phyloseq (>= 1.20.0)
 License: CC0
 LazyData: true
-Suggests: knitr
-VignetteBuilder: knitr, rmarkdown
+Suggests: knitr, rmarkdown
+VignetteBuilder: knitr
 biocViews:
 RoxygenNote: 6.0.1
