--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: phyloseqGraphTest
 Title: Graph-Based Permutation Tests for Microbiome Data
-Version: 0.1
+Version: 0.0.1
 Author: Julia Fukuyama [aut, cre]
 Maintainer: Julia Fukuyama <julia.fukuyama@gmail.com>
-Description: Graph-based permutation tests and visualization for microbiome data. 
+Description: Provides functions for graph-based multiple-sample
+    testing and visualization of microbiome data, in particular data
+    stored in 'phyloseq' objects.
 Imports:
     ggnetwork (>= 0.5.1),
     igraph (>= 1.1.2),
@@ -16,5 +18,6 @@ License: CC0
 LazyData: true
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
+URL: https://github.com/jfukuyama/phyloseqGraphTest
 biocViews:
 RoxygenNote: 6.0.1
