--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ importFrom(igraph,get.edgelist)
 importFrom(igraph,graph.adjacency)
 importFrom(igraph,induced_subgraph)
 importFrom(igraph,minimum.spanning.tree)
+importFrom(utils,packageVersion)
